--- a/index.html
+++ b/index.html
@@ -31,15 +31,80 @@
 
     <div class="featured-grid">
         <div class="featured-card">
-            <img src="/images/Bradley-HP-Mac.png" alt="Bosch Bradley" class="hp-card-photo">
-            <p class="hp-card-title">
-                Title
-            </p>
-            <div class="card-button">
-                <p>See More</p>
+            <div class="card1">
+                <img src="images/Bradley-HP-Mac.png" alt="Bosch Bradley" class="hp-card-photo">
+                <p class="hp-card-title">
+                    Bosch Bradley
+                </p>
+                <div class="card-button">
+                    <a href="#">See More</a>
+                </div>
+            </div>
+        </div>
+        <div class="featured-card">
+            <div class="card2">
+                <img src="images/Homepage-mac.png" alt="Black Diamond Tattoos" class="hp-card-photo">
+                <p class="hp-card-title">
+                    Black Diamond Tattoos
+                </p>
+                <div class="card-button">
+                    <a href="#">See More</a>
+                </div>
+            </div>
+        </div>
+        <div class="featured-card">
+            <div class="card3">
+                <img src="images/Stuber-HP-Mac.png" alt="Stuber" class="hp-card-photo">
+                <p class="hp-card-title">
+                    Stuber
+                </p>
+                <div class="card-button">
+                    <a href="#">See More</a>
+                </div>
             </div>
         </div>
     </div>
+
+    <div id="overlay1">
+        <div class="overlay-card">
+            <img src="images/Bradley-HP-Mac.png" alt="Bosch Bradley">
+        </div>
+    </div>
+
+    <div id="overlay2">
+        <div class="overlay-card">
+            <img src="images/BlackDiamond - Tattoos.png" alt="Bosch Bradley">
+        </div>
+    </div>
+
+    <div id="overlay1">
+        <div class="overlay-card">
+            <img src="images/Stuber-HP-Mac.png" alt="Bosch Bradley">
+        </div>
+    </div>
+
+    <div class="footer-big">
+        <div class="hp-about">
+            <p>Small about blurb</p>
+            <div class="hp-cta">
+                <a href="#">Call To Action</a>
+            </div>
+        </div>
+        <div class="footer-small">
+            <p>Footer</p>
+        </div>
+    </div>
+
+    <script>
+        function on() {
+            document.getElementById("overlay").style.display = "block";
+        }
+
+function off() {
+            document.getElementById("overlay").style.display = "none";
+        }
+    
+    </script>
     
 </body>
 </html>
