--- a/myWork.html
+++ b/myWork.html
@@ -8,6 +8,22 @@
     <title>My Work</title>
 </head>
 <body>
+    <div class="heading-big-pages">
+        <div class="heading-small-pages">
+            <a href="index.html"><img src="/images/AW-logo-small.png" alt="AW-Creative" class="logo-002"></a>
+            
+
+            <ul>
+                <li>
+                    <a href="myWork.html">My Work</a>
+                    <a href="aboutMe.html">About</a>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
     
 </body>
 </html>
