--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,7 +10,7 @@
 <body>
     <div class="heading-big-pages">
         <div class="heading-small-pages">
-            <a href="index.html"><img src="/images/AW-logo-small.png" alt="AW-Creative" class="logo-002"></a>
+            <a href="index.html"><img src="images/AW-logo-small.png" alt="AW-Creative" class="logo-002"></a>
             
 
             <ul>
@@ -20,6 +20,33 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+        </div>
+    </div>
+
+    <div class="call-to-action">
+        <div class="cta-text">
+            <p>Think I'm the person for you?</p>
+        </div>
+        <div class="cta-button">
+            <a href="contact.html">Hire Me!</a>
+        </div>
+    </div>
+
+    <div class="footer-big-pages">
+        <div class="footer-small-pages">
+            <div class="footer-info">
+                <div class="page-links">
+                    <a href="index.html">Home</a><br>
+                    <a href="myWork.html">My Work</a><br>
+                    <a href="aboutMe.html">About</a><br>
+                    <a href="contact.html">Contact</a><br>
+                </div>
+                <div class="icons">
+                    <a href="https://www.facebook.com"><img src="images/icons/facebook.svg" alt="facebook"></a>
+                    <a href="https://www.instagram.com"><img src="images/icons/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.behance.com"><img src="images/icons/behance.svg" alt="behance"></a>
+                </div>
+            </div>
         </div>
     </div>
     
