--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="heading-big">
         <div class="heading-small">
-            <img src="/images/AW-logo-small.png" alt="AW-Creative" class="logo-001">
+            <img src="images/AW-logo-small.png" alt="AW-Creative" class="logo-001">
 
             <ul>
                 <li>
@@ -65,24 +65,6 @@
         </div>
     </div>
 
-    <div id="overlay1">
-        <div class="overlay-card">
-            <img src="images/Bradley-HP-Mac.png" alt="Bosch Bradley">
-        </div>
-    </div>
-
-    <div id="overlay2">
-        <div class="overlay-card">
-            <img src="images/BlackDiamond - Tattoos.png" alt="Bosch Bradley">
-        </div>
-    </div>
-
-    <div id="overlay1">
-        <div class="overlay-card">
-            <img src="images/Stuber-HP-Mac.png" alt="Bosch Bradley">
-        </div>
-    </div>
-
     <div class="footer-big">
         <div class="hp-about">
             <p>Small about blurb</p>
@@ -91,20 +73,20 @@
             </div>
         </div>
         <div class="footer-small">
-            <p>Footer</p>
+            <div class="footer-info">
+                <div class="page-links">
+                    <a href="myWork.html">My Work</a><br>
+                    <a href="aboutMe.html">About</a><br>
+                    <a href="contact.html">Contact</a><br>
+                </div>
+                <div class="icons">
+                    <a href="https://www.facebook.com"><img src="images/icons/facebook.svg" alt="facebook"></a>
+                    <a href="https://www.instagram.com"><img src="images/icons/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.behance.com"><img src="images/icons/behance.svg" alt="behance"></a>
+                </div>
+            </div>
         </div>
     </div>
-
-    <script>
-        function on() {
-            document.getElementById("overlay").style.display = "block";
-        }
-
-function off() {
-            document.getElementById("overlay").style.display = "none";
-        }
-    
-    </script>
     
 </body>
 </html>
