--- a/myWork.html
+++ b/myWork.html
@@ -10,8 +10,7 @@
 <body>
     <div class="heading-big-pages">
         <div class="heading-small-pages">
-            <a href="index.html"><img src="/images/AW-logo-small.png" alt="AW-Creative" class="logo-002"></a>
-            
+            <a href="index.html"><img src="images/AW-logo-small.png" alt="AW-Creative" class="logo-002"></a>            
 
             <ul>
                 <li>
@@ -23,7 +22,53 @@
         </div>
     </div>
 
+    <h2 class="page-title">
+        My Work
+    </h2>
 
+    <div class="card-container">
+        <div class="card-grid">
+            <div class="items">
+                <a href="myWork/bradley.html"><img src="images/Bradley-HP-Mac.png" alt="Bosch Bradley"></a>
+                <p>Bosch Bradley</p>
+            </div>
+            <div class="items">
+                <a href="myWork/blackdiamond.html"><img src="images/BlackDiamond - Tattoos - Mac.png" alt="Black Diamond Tattoos"></a>
+                <p>Black Diamond Tattoos</p>
+            </div>
+            <div class="items">
+                <a href="myWork/stuber.html"><img src="images/Stuber-HP-Mac.png" alt="Stuber"></a>
+                <p>Stuber</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="call-to-action">
+        <div class="cta-text">
+            <p>Think I'm the person for you?</p>
+        </div>
+        <div class="cta-button">
+            <a href="contact.html">Hire Me!</a>
+        </div>
+    </div>
+
+    <div class="footer-big-pages">
+        <div class="footer-small-pages">
+            <div class="footer-info">
+                <div class="page-links">
+                    <a href="index.html">Home</a><br>
+                    <a href="myWork.html">My Work</a><br>
+                    <a href="aboutMe.html">About</a><br>
+                    <a href="contact.html">Contact</a><br>
+                </div>
+                <div class="icons">
+                    <a href="https://www.facebook.com"><img src="images/icons/facebook.svg" alt="facebook"></a>
+                    <a href="https://www.instagram.com"><img src="images/icons/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.behance.com"><img src="images/icons/behance.svg" alt="behance"></a>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
