--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="featured-grid">
         <div class="featured-card">
             <div class="card1">
-                <img src="images/Bradley-HP-Mac.png" alt="Bosch Bradley" class="hp-card-photo">
+                <img src="images/bradley-Mac.png" alt="Bosch Bradley" class="hp-card-photo">
                 <p class="hp-card-title">
                     Bosch Bradley
                 </p>
@@ -43,20 +43,20 @@
         </div>
         <div class="featured-card">
             <div class="card2">
-                <img src="images/Homepage-mac.png" alt="Black Diamond Tattoos" class="hp-card-photo">
+                <a href="mywork/blackdiamond.html"><img src="images/blackdiamond-transparent.png" alt="Black Diamond Tattoos" class="hp-card-photo"></a>
                 <p class="hp-card-title">
                     Black Diamond Tattoos
                 </p>
                 <div class="card-button">
-                    <a href="#">See More</a>
+                    <a href="myWork/blackdiamond.html">See More</a>
                 </div>
             </div>
         </div>
         <div class="featured-card">
             <div class="card3">
-                <img src="images/Stuber-HP-Mac.png" alt="Stuber" class="hp-card-photo">
+                <img src="images/phone-transparent.png" alt="One Of A Kind" class="hp-card-photo">
                 <p class="hp-card-title">
-                    Stuber
+                    One Of A Kind
                 </p>
                 <div class="card-button">
                     <a href="#">See More</a>
