--- a/myWork.html
+++ b/myWork.html
@@ -29,16 +29,16 @@
     <div class="card-container">
         <div class="card-grid">
             <div class="items">
-                <a href="myWork/bradley.html"><img src="images/Bradley-HP-Mac.png" alt="Bosch Bradley"></a>
+                <a href="bradley.html"><img src="images/Bradley-Mac.png" alt="Bosch Bradley"></a>
                 <p>Bosch Bradley</p>
             </div>
             <div class="items">
-                <a href="myWork/blackdiamond.html"><img src="images/BlackDiamond - Tattoos - Mac.png" alt="Black Diamond Tattoos"></a>
+                <a href="blackdiamond.html"><img src="images/blackdiamond-transparent.png" alt="Black Diamond Tattoos"></a>
                 <p>Black Diamond Tattoos</p>
             </div>
             <div class="items">
-                <a href="myWork/stuber.html"><img src="images/Stuber-HP-Mac.png" alt="Stuber"></a>
-                <p>Stuber</p>
+                <a href="oneofakind.html"><img src="images/phone-transparent.png" alt="One Of A Kind"></a>
+                <p>One Of A Kind</p>
             </div>
         </div>
     </div>
