--- a/index.html
+++ b/index.html
@@ -32,34 +32,34 @@
     <div class="featured-grid">
         <div class="featured-card">
             <div class="card1">
-                <img src="images/bradley-Mac.png" alt="Bosch Bradley" class="hp-card-photo">
+                <a href="bradley.html"><img src="images/bradley-Mac.png" alt="Bosch Bradley" class="hp-card-photo"></a>
                 <p class="hp-card-title">
                     Bosch Bradley
                 </p>
                 <div class="card-button">
-                    <a href="#">See More</a>
+                    <a href="bradley.html">See More</a>
                 </div>
             </div>
         </div>
         <div class="featured-card">
             <div class="card2">
-                <a href="mywork/blackdiamond.html"><img src="images/blackdiamond-transparent.png" alt="Black Diamond Tattoos" class="hp-card-photo"></a>
+                <a href="blackdiamond.html"><img src="images/blackdiamond-transparent.png" alt="Black Diamond Tattoos" class="hp-card-photo"></a>
                 <p class="hp-card-title">
                     Black Diamond Tattoos
                 </p>
                 <div class="card-button">
-                    <a href="myWork/blackdiamond.html">See More</a>
+                    <a href="blackdiamond.html">See More</a>
                 </div>
             </div>
         </div>
         <div class="featured-card">
             <div class="card3">
-                <img src="images/phone-transparent.png" alt="One Of A Kind" class="hp-card-photo">
+                <a href="oneOfAKind.html"><img src="images/ooak-phone-transparent.png" alt="One Of A Kind" class="hp-card-photo"></a>
                 <p class="hp-card-title">
                     One Of A Kind
                 </p>
                 <div class="card-button">
-                    <a href="#">See More</a>
+                    <a href="oneOfAKind.html">See More</a>
                 </div>
             </div>
         </div>
